Add enable-native-access to build.gradle.kts